--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
   <div id="filtro-container">
     <label for="filtro-posicion"><strong>Filtrar por posición:</strong></label>
     <select id="filtro-posicion">
-      <option value="todos">Todos</option>
+      <option value="TODOS">Todos</option>
       <option value="GK">Portero (GK)</option>
-      <option value="DF">Defensa (DF)</option>
-      <option value="MF">Medio (MF)</option>
       <option value="FW">Delantero (FW)</option>
     </select>
   </div>
