--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
       text-align: center;
     }
 
-    #filtro-container {
-      text-align: center;
+    #filtros {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
       margin-bottom: 20px;
+      flex-wrap: wrap;
     }
 
-    #filtro-posicion {
+    select {
       padding: 6px;
       font-size: 16px;
     }
@@ -51,18 +54,36 @@
     .personaje-card p {
       margin: 4px 0;
     }
+
+    .afinidad-icon {
+      width: 40px;
+      margin-top: 5px;
+    }
   </style>
 </head>
 <body>
   <h1>Inazuma Eleven: Victory Road — Team Builder</h1>
 
-  <div id="filtro-container">
-    <label for="filtro-posicion"><strong>Filtrar por posición:</strong></label>
-    <select id="filtro-posicion">
-      <option value="TODOS">Todos</option>
-      <option value="GK">Portero (GK)</option>
-      <option value="FW">Delantero (FW)</option>
-    </select>
+  <div id="filtros">
+    <label>
+      Posición:
+      <select id="filtro-posicion">
+        <option value="TODOS">Todos</option>
+        <option value="GK">Portero (GK)</option>
+        <option value="DF">Defensa (DF)</option>
+        <option value="MF">Centrocampista (MF)</option>
+        <option value="FW">Delantero (FW)</option>
+      </select>
+    </label>
+
+    <label>
+      Género:
+      <select id="filtro-genero">
+        <option value="TODOS">Todos</option>
+        <option value="Male">Masculino</option>
+        <option value="Female">Femenino</option>
+      </select>
+    </label>
   </div>
 
   <div class="grid" id="personajes-container"></div>
