--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Inazuma Eleven: Victory Road — Team Builder</title>
   <style>
     body {
@@ -15,7 +15,7 @@
       text-align: center;
     }
 
-    #filtros {
+    #filters {
       display: flex;
       justify-content: center;
       gap: 20px;
@@ -34,7 +34,7 @@
       gap: 20px;
     }
 
-    .personaje-card {
+    .character-card {
       background-color: white;
       border-radius: 12px;
       padding: 10px;
@@ -42,16 +42,16 @@
       text-align: center;
     }
 
-    .personaje-card img.sprite {
+    .character-card img.sprite {
       width: 100px;
       height: auto;
     }
 
-    .personaje-card h3 {
+    .character-card h3 {
       margin: 10px 0 5px;
     }
 
-    .icono {
+    .icon {
       width: 30px;
       margin: 4px;
     }
@@ -60,29 +60,40 @@
 <body>
   <h1>Inazuma Eleven: Victory Road — Team Builder</h1>
 
-  <div id="filtros">
+  <div id="filters">
     <label>
-      Posición:
-      <select id="filtro-posicion">
-        <option value="TODOS">Todos</option>
-        <option value="GK">Portero (GK)</option>
-        <option value="DF">Defensa (DF)</option>
-        <option value="MF">Centrocampista (MF)</option>
-        <option value="FW">Delantero (FW)</option>
+      Position:
+      <select id="filter-position">
+        <option value="ALL">All</option>
+        <option value="GK">Goalkeeper (GK)</option>
+        <option value="DF">Defense (DF)</option>
+        <option value="MF">Midfield (MF)</option>
+        <option value="FW">Forward (FW)</option>
       </select>
     </label>
 
     <label>
-      Género:
-      <select id="filtro-genero">
-        <option value="todos">Todos</option>
-        <option value="male">Masculino</option>
-        <option value="female">Femenino</option>
+      Gender:
+      <select id="filter-gender">
+        <option value="all">All</option>
+        <option value="male">Male</option>
+        <option value="female">Female</option>
+      </select>
+    </label>
+
+    <label>
+      Affinity:
+      <select id="filter-affinity">
+        <option value="all">All</option>
+        <option value="fire">Fire</option>
+        <option value="earth">Earth</option>
+        <option value="wind">Wind</option>
+        <option value="wood">Wood</option>
       </select>
     </label>
   </div>
 
-  <div class="grid" id="personajes-container"></div>
+  <div class="grid" id="characters-container"></div>
 
   <script src="js/main.js"></script>
 </body>
