--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     }
 
     .character-card img.sprite {
-      width: 100px;
-      height: 100px;
+      width: 150px;
+      height: 150px;
       object-fit: contain;
-      image-rendering: pixelated;
+      /* removed image-rendering pixelated for smoother scaling */
     }
 
     .character-card .name {
