--- a/index.html
+++ b/index.html
@@ -7,82 +7,69 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      text-align: center;
+      background-color: #111;
+      color: #fff;
       margin: 0;
-      padding: 1rem;
+      padding: 20px;
     }
-
     h1 {
-      margin-bottom: 1rem;
+      text-align: center;
     }
-
     .filters {
-      margin-bottom: 2rem;
-    }
-
-    select {
-      margin: 0 0.5rem;
-      padding: 0.4rem;
-      font-size: 1rem;
-    }
-
-    .character-grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 1.5rem;
+      gap: 20px;
+      margin-bottom: 20px;
     }
-
+    .filters select {
+      padding: 5px;
+      font-size: 16px;
+    }
+    .characters {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 20px;
+    }
     .character-card {
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      padding: 1rem;
-      width: 140px;
+      background: #222;
+      border-radius: 10px;
+      padding: 10px;
+      text-align: center;
       transition: transform 0.2s;
-      cursor: pointer;
-      text-decoration: none;
-      color: inherit;
     }
-
     .character-card:hover {
       transform: scale(1.05);
+      cursor: pointer;
     }
-
     .character-card img {
-      width: 100px;
-      height: 100px;
+      width: 80px;
+      height: 80px;
       object-fit: contain;
-      image-rendering: pixelated;
     }
-
-    .icon-row {
-      display: flex;
-      justify-content: center;
-      gap: 0.3rem;
-      margin-top: 0.5rem;
+    .icons {
+      margin-top: 10px;
     }
-
-    .icon-row img {
+    .icons img {
       width: 24px;
       height: 24px;
+      margin: 0 3px;
     }
   </style>
 </head>
 <body>
-  <h1>Inazuma Eleven - Team Builder</h1>
+  <h1>Inazuma Eleven: Victory Road – Team Builder</h1>
 
   <div class="filters">
-    <select id="positionFilter">
+    <select id="filter-position">
       <option value="">All Positions</option>
-      <option value="gk">Goalkeeper</option>
-      <option value="df">Defender</option>
-      <option value="mf">Midfielder</option>
-      <option value="fw">Forward</option>
+      <option value="gk">Goalkeeper (GK)</option>
+      <option value="df">Defender (DF)</option>
+      <option value="mf">Midfielder (MF)</option>
+      <option value="fw">Forward (FW)</option>
     </select>
 
-    <select id="affinityFilter">
+    <select id="filter-affinity">
       <option value="">All Affinities</option>
       <option value="fire">Fire</option>
       <option value="earth">Earth</option>
@@ -90,15 +77,73 @@
       <option value="wood">Wood</option>
     </select>
 
-    <select id="genderFilter">
+    <select id="filter-gender">
       <option value="">All Genders</option>
       <option value="male">Male</option>
       <option value="female">Female</option>
     </select>
   </div>
 
-  <div class="character-grid" id="characterGrid"></div>
+  <div class="characters" id="characters-container"></div>
 
-  <script src="main.js"></script>
+  <script>
+    const container = document.getElementById("characters-container");
+    const filterPosition = document.getElementById("filter-position");
+    const filterAffinity = document.getElementById("filter-affinity");
+    const filterGender = document.getElementById("filter-gender");
+
+    let allCharacters = {};
+
+    function renderCharacters(characters) {
+      container.innerHTML = "";
+      const sortedNames = Object.keys(characters).sort();
+
+      sortedNames.forEach((key) => {
+        const char = characters[key];
+        const card = document.createElement("div");
+        card.className = "character-card";
+        card.onclick = () => {
+          window.location.href = `character.html?name=${char.name}`;
+        };
+
+        card.innerHTML = `
+          <img src="sprites/characters/${char.name}.png" alt="${char.name}">
+          <div class="icons">
+            <img src="sprites/positions/${char.position}.png" alt="${char.position}">
+            <img src="sprites/affinities/${char.affinity}.png" alt="${char.affinity}">
+            <img src="sprites/gender/${char.gender}.png" alt="${char.gender}">
+          </div>
+        `;
+        container.appendChild(card);
+      });
+    }
+
+    function applyFilters() {
+      const pos = filterPosition.value;
+      const aff = filterAffinity.value;
+      const gen = filterGender.value;
+
+      const filtered = {};
+      for (const key in allCharacters) {
+        const c = allCharacters[key];
+        if ((pos && c.position !== pos) || (aff && c.affinity !== aff) || (gen && c.gender !== gen)) {
+          continue;
+        }
+        filtered[key] = c;
+      }
+      renderCharacters(filtered);
+    }
+
+    fetch("data/characters.json")
+      .then((res) => res.json())
+      .then((data) => {
+        allCharacters = data;
+        renderCharacters(allCharacters);
+      });
+
+    filterPosition.addEventListener("change", applyFilters);
+    filterAffinity.addEventListener("change", applyFilters);
+    filterGender.addEventListener("change", applyFilters);
+  </script>
 </body>
 </html>
