--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #111;
-      color: #fff;
+      background-color: #ffffff;
+      color: #000000;
       margin: 0;
       padding: 20px;
     }
@@ -32,28 +32,35 @@
       gap: 20px;
     }
     .character-card {
-      background: #222;
+      background: #f2f2f2;
       border-radius: 10px;
       padding: 10px;
       text-align: center;
       transition: transform 0.2s;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     }
     .character-card:hover {
       transform: scale(1.05);
       cursor: pointer;
     }
-    .character-card img {
-      width: 80px;
-      height: 80px;
+    .character-card img.character-sprite {
+      width: 100px;
+      height: 100px;
       object-fit: contain;
     }
-    .icons {
+    .character-name {
       margin-top: 10px;
+      font-weight: bold;
+      font-size: 16px;
+      text-transform: capitalize;
+    }
+    .icons {
+      margin-top: 8px;
     }
     .icons img {
       width: 24px;
       height: 24px;
-      margin: 0 3px;
+      margin: 0 4px;
     }
   </style>
 </head>
@@ -107,7 +114,8 @@
         };
 
         card.innerHTML = `
-          <img src="sprites/characters/${char.name}.png" alt="${char.name}">
+          <img class="character-sprite" src="sprites/characters/${char.name}.png" alt="${char.name}">
+          <div class="character-name">${char.name.replace(/_/g, " ")}</div>
           <div class="icons">
             <img src="sprites/positions/${char.position}.png" alt="${char.position}">
             <img src="sprites/affinities/${char.affinity}.png" alt="${char.affinity}">
